--- a/res/css/EX1.css
+++ b/res/css/EX1.css
@@ -8,11 +8,9 @@ h1 {
 h2 {
   color: blue;
   font-size: 18px;
-  font-style: italic;
+  font-style: bold;
 }
  
 p {
   color: red;
-  text-align: right;
-  font-style: normal;
 }
